# paper-searcher

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_fetch.yml
app/: streamlit_app.py
config/: default.yaml
docs/: dev_log_v0.1.0_项目初始化.md
src/paper_searcher/: __init__.py  classifier.py  config.py  fetcher.py  filter.py  llm_client.py  report.py  storage.py  summarizer.py
